fix font layout shift

--- a/src/app.css
+++ b/src/app.css
@@ -5,6 +5,7 @@
 @layer base {
 	html {
 		font-family: 'Nunito Variable', sans-serif;
+		font-display: optional;
 	}
 }
 
